tests/errors/range_as_value_err/range_as_value_err.c
#error range_as_value_err:7:27 PARSE ERROR: Expected eof (7:27)
#error range_as_value_err:7:27 PARSE ERROR: Expected an expression (7:27)
#error range_as_value_err:7:27 PARSE ERROR: Expected ')' (7:27)
#error range_as_value_err:7:27 PARSE ERROR: Expected ']' (7:27)
